add php7 button

--- a/website/index.html
+++ b/website/index.html
@@ -17,13 +17,13 @@
     <meta content="8bitrockstars, 8 bit rockstars, 8 bitrockstars, nfq asia, php " name="keywords" />
     <!-- OpenGraph meta data -->
     <meta content="8 Bit Rockstars | Powering NFQ Group" property="og:title" />
-    <meta content="http://www.8bitrockstars.com/" property="og:url" />
-    <meta content="https://8bitrockstars.jpg" property="og:image" />
+    <meta content="http://8bitrockr.com/" property="og:url" />
+    <meta content="http://8bitrockr.com/img/logo_w.png" property="og:image" />
     <meta content="8 Bit Rockstars is the nation's coolest agile tech firm, specializing in PHP, and one of the leaders in utilizing Elasticsearch. 8 Bit Rockstars is part of the global NFQ enterprise that began in 2000 in Germany and spans Europe, Vietnam, and Singapore." property="og:description" />
     <!-- Twitter meta data -->
     <meta content="8 Bit Rockstars | Powering NFQ Group" property="twitter:title" />
-    <meta content="http://www.8bitrockstars.com/" property="twitter:url" />
-    <meta content="https://8bitrockstars.jpg" property="twitter:image" />
+    <meta content="http://8bitrockr.com/" property="twitter:url" />
+    <meta content="http://8bitrockr.com/img/logo_w.png" property="twitter:image" />
     <meta content="8 Bit Rockstars is the nation's coolest agile tech firm, specializing in PHP, and one of the leaders in utilizing Elasticsearch. 8 Bit Rockstars is part of the global NFQ enterprise that began in 2000 in Germany and spans Europe, Vietnam, and Singapore." property="twitter:description" />
 
     <!-- Bootstrap CSS -->
@@ -86,6 +86,7 @@
               <a class="nav-item nav-link" href="" data-id="#team" data-scroll="true">Team</a>
               <a class="nav-item nav-link" href="" data-id="#careers" data-scroll="true">Careers</a>
               <a class="nav-item nav-link" href="" data-id="#contact-us" data-scroll="true">Contact Us</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" style="background-color: #6160a2; color: #fff;">PHP 7</a>
             </ul>
           </div>
         </div>
