--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
         
     <meta content="8 Bit Rockstars is the nation's coolest agile tech firm, specializing in PHP, and one of the leaders in utilizing Elasticsearch. 8 Bit Rockstars is part of the global NFQ enterprise that began in 2000 in Germany and spans Europe, Vietnam, and Singapore." name="description" />
-    <meta content="8bitrockstars, 8 bit rockstars, 8 bitrockstars, nfq asia, php " name="keywords" />
+    <meta content="8bitrockr, 8bitrockstars, 8 bit rockstars, 8 bitrockstars, nfq asia, php " name="keywords" />
     <!-- OpenGraph meta data -->
     <meta content="8 Bit Rockstars | Powering NFQ Group" property="og:title" />
     <meta content="http://8bitrockr.com/" property="og:url" />
