--- a/website/index.html
+++ b/website/index.html
@@ -518,8 +518,8 @@
                   <div class="team-sprite team-sprite-14"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Admin &amp; HR officer</h6>
-                  <h4 class="title waypoint">Han Dang</h4>
+                  <h6 class="c-g waypoint">Admin &amp; HR Manager</h6>
+                  <h4 class="title waypoint">Thao Bui</h4>
                 </div>
               </div>
               <div class="col-sm-3  hidden-xs-down">
