add FED team leader

--- a/website/index.html
+++ b/website/index.html
@@ -593,7 +593,7 @@
               <div class="sep"><ul class="three-d"><li></li><li></li><li></li></ul></div>
               <div class="clearfix"></div>
               <br />
-              <div class="container">
+              <div class="container container-job">
                 <!-- <p class="text-center waypoint">
                   <b>Interesting in growing with us? </b><br />
                   visiting our office, <br />
@@ -603,25 +603,31 @@
                   <div class="jobs waypoint">
                     <h4 class="c-g" style="margin-bottom: 2rem;">Current Employment Opportunities</h4>  
                     <ul class="" role="tablist" id="jobs-options">
-                      <li class="job-title col-md-6 col-lg-3">
-                        <h5>SENIOR PHP DEVELOPER</h5>
-                        <a class="" href="#php" role="tab" data-scroll="true" data-id="#job-detail">
+                      <li class="job-title col-md-6 col-lg-4">
+                        <h5>FRONT-END TEAM LEADER</h5>
+                        <a class="" href="#fedtl" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
-                      <li class="job-title col-md-6 col-lg-3">
+                      <li class="job-title col-md-6 col-lg-4">
                         <h5>FRONT-END DEVELOPER</h5>
                         <a class="" href="#front" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
-                      <li class="job-title col-md-6 col-lg-3">
+                      <li class="job-title col-md-6 col-lg-4">
+                        <h5>SENIOR PHP DEVELOPER</h5>
+                        <a class="" href="#php" role="tab" data-scroll="true" data-id="#job-detail">
+                          <small class="c-g">MORE DETAILS >> </small>
+                        </a>
+                      </li>
+                      <li class="job-title col-md-6 col-lg-4">
                         <h5>RUBY ON RAILS DEVELOPER</h5>
                         <a class="" href="#ror" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
-                      <li class="job-title col-md-6 col-lg-3">
+                      <li class="job-title col-md-6 col-lg-4">
                         <h5>iOS DEVELOPER</h5>
                         <a class="" href="#ios" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
@@ -658,7 +664,7 @@
                 <li>Research and apply cutting-edge technologies and develop new ways of unlocking knowledge </li>
                 <li>Be a part of the open source community</li> 
               </ul>
-
+              <br />
               <h6>Your Skills and Experience, Desired Skills and Experience </h6>
               <ul>
                 <li>Very good English communication skills </li>
@@ -671,9 +677,9 @@
                 <li>Strong understanding of OOP/OOD </li> 
                 <li>GIT</li>
               </ul>
-              <div class="text-center">
+              <!-- <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
-              </div>
+              </div> -->
             </div>
             <div role="tabpanel" class="tab-pane" id="front">
               <h5>FRONT-END DEVELOPER</h5>
@@ -683,21 +689,21 @@
                 <li>Apply the latest technology like AngularJs, ReactJs, ES6/7 etc... </li>
                 <li>Every day you have to learn something new</li>
               </ul>
-
-            <h6>Your Skills and Experience, Desired Skills and Experience </h6>
-            <ul>
-              <li>2+ years experience in working with front-end projects </li>
-              <li>Excellent at HTML5, CSS3 </li>
-              <li>Experience with CSS frameworks like Bootstrap </li>
-              <li>Proficient at Javascript library and framework (jQuery, Angular / React / Backbone) </li>
-              <li>Good knowledge of CSS preprocessors (i.e. Less / Sass) </li>
-              <li>Proficient understanding of cross-browser compatibility issues and ways to work around them. </li>
-              <li>Understanding of Git / SVN </li>
-              <li>Open-minded and good at adapting to frequent changes. </li>
-              <li>Willing to learn new technologies while working </li>
-              <li>Attention to details</li>
-              <li>Good communication in English</li>
-            </ul>
+              <br />
+              <h6>Your Skills and Experience, Desired Skills and Experience </h6>
+              <ul>
+                <li>2+ years experience in working with front-end projects </li>
+                <li>Excellent at HTML5, CSS3 </li>
+                <li>Experience with CSS frameworks like Bootstrap </li>
+                <li>Proficient at Javascript library and framework (jQuery, Angular / React / Backbone) </li>
+                <li>Good knowledge of CSS preprocessors (i.e. Less / Sass) </li>
+                <li>Proficient understanding of cross-browser compatibility issues and ways to work around them. </li>
+                <li>Understanding of Git / SVN </li>
+                <li>Open-minded and good at adapting to frequent changes. </li>
+                <li>Willing to learn new technologies while working </li>
+                <li>Attention to details</li>
+                <li>Good communication in English</li>
+              </ul>
               <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20FRONT%20END%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
               </div>
@@ -711,7 +717,7 @@
                 <li>Optimise app and server performance </li>
                 <li>Working, collaborating and knowledge sharing with other engineers</li>
               </ul>
-
+              <br />
               <h6>Your Skills and Experience, Desired Skills and Experience </h6>
               <ul>
                 <li>Ruby 2.2 - Rails 4.x </li>
@@ -724,9 +730,9 @@
                 <li>Clean, beautiful code </li>
                 <li>Git</li>
               </ul>
-              <div class="text-center">
+              <!-- <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
-              </div>
+              </div> -->
             </div>
             <div role="tabpanel" class="tab-pane" id="ios">
               <h5>iOS DEVELOPER</h5>
@@ -736,8 +742,8 @@
                 <li>Apply latest technology to build high quality iOS applications </li>
                 <li>Inspire colleagues to continuously generate forward-thinking ideas and actively contribute to a culture of innovation and excellence.</li>
               </ul>
-
-              <h6 class="text-left">Your Skills and Experience Desired Skills and Experience </h6>
+              <br />
+              <h6>Your Skills and Experience Desired Skills and Experience </h6>
               <ul>
                 <li>2+ years experience in working with iOS app projects. </li>
                 <li>Excellent Objective-C and XCode. </li>
@@ -747,8 +753,43 @@
                 <li>Understanding of Git / SVN. </li>
                 <li>Open-minded and good at adapting to frequent changes.</li>
               </ul>
-              <div class="text-center">
+              <!-- <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
+              </div> -->
+            </div>
+            <div role="tabpanel" class="tab-pane" id="fedtl">
+              <h5>FRONT-END TEAM LEADER</h5>
+              <h6>The Job</h6>
+              <ul>
+                <li><b>Rockstar</b> - Join our Rockstars team to truly become Front End Rockstar </li>
+                <li><b>Fun</b> - Join a young and dynamic team in an international, professional and English speaking working environment </li>
+                <li><b>Tech Rockstar</b> - Apply the latest technology like AngularJs, ReactJs, ES6/7 etc... </li>
+                <li><b>Exciting Projects</b> - Working with oversea clients and awesome projects </li>
+                <li><b>Leader</b> - Supervise and support other junior developers in fulfilling their tasks and improving their skills </li>
+                <li><b>Problem Solver</b> - Ability to find answers through researching and reading documentation</li>
+              </ul>
+              <br />
+              <h6>Your Skills and Experience Desired Skills and Experience </h6>
+              <ul>
+                <li>Positive attitude, responsible and proactive with the ability to learn and achieve superior results. </li>
+                <li>Strong communication skills in English, verbal and written </li>
+                <li>4+ year experience in working with front-end projects </li>
+                <li>Proficient at Javascript library and framework (jQuery, Angular / React / Backbone) </li>
+                <li>Excellent at HTML, HTML5, CSS, CSS3 </li>
+                <li>Good knowledge of CSS preprocessors (i.e. Less / Sass) </li>
+                <li>Excellent with CSS frameworks like Bootstrap / Foundation </li>
+                <li>Proficient understanding of cross-browser compatibility issues and solving them </li>
+                <li>Working experience with Git / SVN </li>
+                <li>Experience working with a team and deadlines </li>
+                <li>Strong teamwork and contribution spirit </li>
+                <li>Understanding of continuous integration </li>
+                <li>Experience with Agile methodology (Scrum) </li>
+                <li>Having good leadership skills and attention to details </li>
+                <li>Open-minded and good at adapting to frequent changes </li>
+                <li>Willing to learn new technologies while working</li>
+              </ul>
+              <div class="text-center">
+                <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20FED%20END%20TEAM%20LEADER" target="_top" class="btn btn-success">Apply</a>
               </div>
             </div>
           </div>
