--- a/website/index.html
+++ b/website/index.html
@@ -86,7 +86,7 @@
               <a class="nav-item nav-link" href="" data-id="#team" data-scroll="true">Team</a>
               <a class="nav-item nav-link" href="" data-id="#careers" data-scroll="true">Careers</a>
               <a class="nav-item nav-link" href="" data-id="#contact-us" data-scroll="true">Contact Us</a>
-              <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" style="background-color: #6160a2; color: #fff;">PHP 7</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" style="background-color: #6160a2; color: #fff;">PHP 7 Event</a>
             </ul>
           </div>
         </div>
