--- a/website/index.html
+++ b/website/index.html
@@ -81,12 +81,18 @@
           </a>
           <div class="nav-wrapper" id="nav-links">
             <nav class="nav navbar-nav">
-              <a class="nav-item nav-link" href="" data-id="#about" data-scroll="true">About</a>
-              <a class="nav-item nav-link" href="" data-id="#what-we-do" data-scroll="true">What we do</a>
-              <a class="nav-item nav-link" href="" data-id="#team" data-scroll="true">Team</a>
-              <a class="nav-item nav-link" href="" data-id="#careers" data-scroll="true">Careers</a>
-              <a class="nav-item nav-link" href="" data-id="#contact-us" data-scroll="true">Contact Us</a>
-              <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" style="background-color: #6160a2; color: #fff;">PHP 7 Event</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/#about" 
+                  data-id="#about" data-scroll="true">About</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/#what-we-do" 
+                  data-id="#what-we-do" data-scroll="true">What we do</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/#team" 
+                  data-id="#team" data-scroll="true">Team</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/#careers" 
+                  data-id="#careers" data-scroll="true">Careers</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/#contact-us" 
+                  data-id="#contact-us" data-scroll="true">Contact Us</a>
+              <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" 
+                  style="background-color: #6160a2; color: #fff;">PHP 7 Event</a>
             </ul>
           </div>
         </div>
@@ -934,7 +940,7 @@
                                                                                      \$$$$$$  |                                               
                                                                                       \______/                                         
 
-      email me at itai.baruch@8bitrockr.com;
+      email me at itai.baruch@8bitrockr.com ;)
       
       */
     </script>
