move cdn to local, and remove unneeded positions

--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
     <meta content="8 Bit Rockstars is the nation's coolest agile tech firm, specializing in PHP, and one of the leaders in utilizing Elasticsearch. 8 Bit Rockstars is part of the global NFQ enterprise that began in 2000 in Germany and spans Europe, Vietnam, and Singapore." property="twitter:description" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Custom styles -->
     <!-- <link rel="stylesheet" href="css/css.css"> -->
@@ -634,7 +634,7 @@
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
-                      <li class="job-title col-md-6 col-lg-4">
+                      <!-- <li class="job-title col-md-6 col-lg-4">
                         <h5>RUBY ON RAILS DEVELOPER</h5>
                         <a class="" href="#ror" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
@@ -645,7 +645,7 @@
                         <a class="" href="#ios" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
                 </div>
@@ -690,9 +690,9 @@
                 <li>Strong understanding of OOP/OOD </li> 
                 <li>GIT</li>
               </ul>
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20SENIOR%20PHP%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
-              </div> -->
+              </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="front">
               <h5>FRONT-END DEVELOPER</h5>
@@ -870,8 +870,8 @@
     </footer>
 
     <!-- jQuery first, then Bootstrap JS. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     
     <script src="js/jquery.waypoints.min.js"></script>
     <!-- Custom javascript -->
