--- a/website/index.html
+++ b/website/index.html
@@ -634,7 +634,13 @@
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
                       </li>
-                      <!-- <li class="job-title col-md-6 col-lg-4">
+                      <li class="job-title col-md-6 col-lg-4">
+                        <h5>PROJECT MANAGER</h5>
+                        <a class="" href="#pm" role="tab" data-scroll="true" data-id="#job-detail">
+                          <small class="c-g">MORE DETAILS >> </small>
+                        </a>
+                      </li>
+                      <li class="job-title col-md-6 col-lg-4">
                         <h5>RUBY ON RAILS DEVELOPER</h5>
                         <a class="" href="#ror" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
@@ -645,7 +651,7 @@
                         <a class="" href="#ios" role="tab" data-scroll="true" data-id="#job-detail">
                           <small class="c-g">MORE DETAILS >> </small>
                         </a>
-                      </li> -->
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -743,9 +749,9 @@
                 <li>Clean, beautiful code </li>
                 <li>Git</li>
               </ul>
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20RUBY%20ON%20RAILS%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
-              </div> -->
+              </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="ios">
               <h5>iOS DEVELOPER</h5>
@@ -766,9 +772,9 @@
                 <li>Understanding of Git / SVN. </li>
                 <li>Open-minded and good at adapting to frequent changes.</li>
               </ul>
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20IOS%20DEVELOPTER" target="_top" class="btn btn-success">Apply</a>
-              </div> -->
+              </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="fedtl">
               <h5>FRONT-END TEAM LEADER</h5>
@@ -803,6 +809,30 @@
               </ul>
               <div class="text-center">
                 <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20FED%20END%20TEAM%20LEADER" target="_top" class="btn btn-success">Apply</a>
+              </div>
+            </div>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="pm">
+              <h5>PROJECT MANAGER</h5>
+              <h6>You will have responsibility for</h6>
+              <ul>
+                <li>Managing full lifecycle customer projects</li>
+                <li>Developing strong relationships with customers, acting as the primary point of contact as well as managing stakeholder expectations</li>
+                <li>Motivating and leading the engineers with agile methods</li>
+              </ul>
+              <br />
+              <h6>The Job</h6>
+              <ul>
+                <li>A degree would be nice, however attitude and experience matters more</li>
+                <li>Very good communication skills, written and spoken (english)</li>
+                <li>Strong technical and project management skills</li>
+                <li>2+ years' Project Management or technical leadership experience</li>
+                <li>Experience Web and Software Development</li>
+                <li>Agile methods</li>
+                <li>Interested in travelling and visiting our customers on-site</li>
+              </ul>
+              <div class="text-center">
+                <a href="mailto:recruit@8bitrockr.com?Subject=Apply%20for%20PROJECT%20MANAGER" target="_top" class="btn btn-success">Apply</a>
               </div>
             </div>
           </div>
