--- a/website/index.html
+++ b/website/index.html
@@ -106,7 +106,8 @@
           <div class="content">
             <div class="black-ball">
               <img src="img/logo.png" class="img-responsive"/>  
-              <p class="lead">Customer and Technology <br />in Mind</p>
+              <h3 class="lead c-g b-black">Scaling Companies</h3>
+              <!-- <p class="lead">Customer and Technology <br />in Mind</p> -->
             </div>
           </div>
         </div>
