remove php7 link

--- a/website/index.html
+++ b/website/index.html
@@ -91,8 +91,8 @@
                   data-id="#careers" data-scroll="true">Careers</a>
               <a class="nav-item nav-link" href="http://8bitrockr.com/#contact-us" 
                   data-id="#contact-us" data-scroll="true">Contact Us</a>
-              <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" 
-                  style="background-color: #6160a2; color: #fff;">PHP 7 Event</a>
+              <!-- <a class="nav-item nav-link" href="http://8bitrockr.com/php7/" 
+                  style="background-color: #6160a2; color: #fff;">PHP 7 Event</a> -->
             </ul>
           </div>
         </div>
