remove thao pic

--- a/website/index.html
+++ b/website/index.html
@@ -519,8 +519,7 @@
                   <h4 class="title waypoint">Nghia Dinh</h4>
                 </div>
               </div>
-              <div class="col-sm-3">
-                <!-- <img src="img/team/all-17.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+              <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-14"></div>
                 </div>
@@ -528,7 +527,7 @@
                   <h6 class="c-g waypoint">Admin &amp; HR Manager</h6>
                   <h4 class="title waypoint">Thao Bui</h4>
                 </div>
-              </div>
+              </div> -->
               <div class="col-sm-3  hidden-xs-down">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-16"></div>
