--- a/website/index.html
+++ b/website/index.html
@@ -528,13 +528,22 @@
                   <h4 class="title waypoint">Thao Bui</h4>
                 </div>
               </div> -->
-              <div class="col-sm-3  hidden-xs-down">
+              <div class="col-sm-3 hidden-xs-down">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-16"></div>
                 </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Front-End Developer</h6>
                   <h4 class="title waypoint">Huy Vuong</h4>
+                </div>
+              </div>
+              <div class="col-sm-3 hidden-xs-down">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-17"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Front-End Developer</h6>
+                  <h4 class="title waypoint">Nam Nguyen</h4>
                 </div>
               </div>
             </div>
