--- a/website/index.html
+++ b/website/index.html
@@ -528,7 +528,7 @@
                   <h4 class="title waypoint">Thao Bui</h4>
                 </div>
               </div> -->
-              <div class="col-sm-3 hidden-xs-down">
+              <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-16"></div>
                 </div>
@@ -537,7 +537,7 @@
                   <h4 class="title waypoint">Huy Vuong</h4>
                 </div>
               </div>
-              <div class="col-sm-3 hidden-xs-down">
+              <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-17"></div>
                 </div>
