--- a/website/index.html
+++ b/website/index.html
@@ -547,6 +547,44 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-18"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Trung Le</h4>
+                </div>
+              </div>
+              <div class="col-sm-3 hide">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-9"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Lead Developer</h6>
+                  <h4 class="title waypoint">Nghia Dinh</h4>
+                </div>
+              </div>
+              <div class="col-sm-3 hide">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-16"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Front-End Developer</h6>
+                  <h4 class="title waypoint">Huy Vuong</h4>
+                </div>
+              </div>
+              <div class="col-sm-3 hide">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-17"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Front-End Developer</h6>
+                  <h4 class="title waypoint">Nam Nguyen</h4>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <br />
