--- a/website/index.html
+++ b/website/index.html
@@ -519,15 +519,6 @@
                   <h4 class="title waypoint">Nghia Dinh</h4>
                 </div>
               </div>
-              <!-- <div class="col-sm-3">
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-14"></div>
-                </div>
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Admin &amp; HR Manager</h6>
-                  <h4 class="title waypoint">Thao Bui</h4>
-                </div>
-              </div> -->
               <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-16"></div>
@@ -557,13 +548,13 @@
                   <h4 class="title waypoint">Trung Le</h4>
                 </div>
               </div>
-              <div class="col-sm-3 hide">
+              <div class="col-sm-3">
                 <div class="team-img">
-                  <div class="team-sprite team-sprite-9"></div>
+                  <div class="team-sprite team-sprite-14"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Lead Developer</h6>
-                  <h4 class="title waypoint">Nghia Dinh</h4>
+                  <h6 class="c-g waypoint">Admin &amp; HR Manager</h6>
+                  <h4 class="title waypoint">Tram Nguyen</h4>
                 </div>
               </div>
               <div class="col-sm-3 hide">
