add ben,quang and tien

--- a/website/index.html
+++ b/website/index.html
@@ -361,10 +361,13 @@
           <div class="clearfix"></div>
           <br />
           <h4 class="align-center heading c-g waypoint">members</h4>
+
+
+
+
           <div id="members">
             <div class="row">
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-14-1.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-11"></div>
                 </div>
@@ -374,7 +377,6 @@
                 </div>
               </div>
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-9.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-2"></div>
                 </div>
@@ -384,7 +386,6 @@
                 </div>
               </div>
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-10.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-1"></div>
                 </div>
@@ -394,7 +395,6 @@
                 </div>
               </div>
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-1-1.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-12"></div>
                 </div>
@@ -403,82 +403,17 @@
                   <h4 class="title waypoint">Vinh Do</h4>
                 </div>
               </div>
-              
-              
-              <!-- <div class="col-sm-3">
-                <img src="img/team/all.jpg" alt="" class="img-responsive m-auto waypoint" />
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Recruiter</h6>
-                  <h4 class="title waypoint">Sean Laurence</h4>
-                </div>
-              </div> -->
-            </div>
-            <div class="row">
+
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-4.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
-                  <div class="team-sprite team-sprite-6"></div>
+                  <div class="team-sprite2 team-sprite2-1"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Senior Software Engineer</h6>
-                  <h4 class="title waypoint">Dung Nguyen</h4>
+                  <h6 class="c-g waypoint">Project Manager</h6>
+                  <h4 class="title waypoint">Ben Reinecke</h4>
                 </div>
               </div>
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-5.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-5"></div>
-                </div>
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Software Engineer</h6>
-                  <h4 class="title waypoint">Trung Tran</h4>
-                </div>
-              </div>
-              <div class="col-sm-3">
-                <!-- <img src="img/team/all-3.jpg" alt="" class="img-responsive m-
-                auto waypoint" /> -->
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-7"></div>
-                </div>
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Software Engineer</h6>
-                  <h4 class="title waypoint">Anh Nguyen</h4>
-                </div>
-              </div>
-              <div class="col-sm-3">
-                <!-- <img src="img/team/all-12.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-4"></div>
-                </div>
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Software Engineer</h6>
-                  <h4 class="title waypoint">Hau Tran</h4>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-3">
-                <!-- <img src="img/team/all-2.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-8"></div>
-                </div>
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Software Engineer</h6>
-                  <h4 class="title waypoint">Long Nguyen</h4>
-                </div>
-              </div>
-              <div class="col-sm-3">
-                <!-- <img src="img/team/all-6-1.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-13"></div>
-                </div>
-                <div class="title-wrap">
-                  <h6 class="c-g waypoint">Software Engineer</h6>
-                  <h4 class="title waypoint">Tuan Ha</h4>
-                </div>
-              </div>
-              <div class="col-sm-3">
-                <!-- <img src="img/team/all-11.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-3"></div>
                 </div>
@@ -488,7 +423,71 @@
                 </div>
               </div>
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-15.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-14"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Admin &amp; HR Manager</h6>
+                  <h4 class="title waypoint">Tram Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-6"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Senior Software Engineer</h6>
+                  <h4 class="title waypoint">Dung Nguyen</h4>
+                </div>
+              </div>
+
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-5"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Trung Tran</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-7"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Anh Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-4"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Hau Tran</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-8"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Long Nguyen</h4>
+                </div>
+              </div>
+
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite team-sprite-13"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Tuan Ha</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-15"></div>
                 </div>
@@ -497,10 +496,8 @@
                   <h4 class="title waypoint">Kiet Mai</h4>
                 </div>
               </div>
-            </div>
-            <div class="row">
+
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-18.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-10"></div>
                 </div>
@@ -510,7 +507,6 @@
                 </div>
               </div>
               <div class="col-sm-3">
-                <!-- <img src="img/team/all-16.jpg" alt="" class="img-responsive m-auto waypoint" /> -->
                 <div class="team-img">
                   <div class="team-sprite team-sprite-9"></div>
                 </div>
@@ -537,8 +533,7 @@
                   <h4 class="title waypoint">Nam Nguyen</h4>
                 </div>
               </div>
-            </div>
-            <div class="row">
+
               <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-18"></div>
@@ -550,30 +545,30 @@
               </div>
               <div class="col-sm-3">
                 <div class="team-img">
-                  <div class="team-sprite team-sprite-14"></div>
+                  <div class="team-sprite2 team-sprite2-3"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Admin &amp; HR Manager</h6>
-                  <h4 class="title waypoint">Tram Nguyen</h4>
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Tien Dinh</h4>
                 </div>
               </div>
               <div class="col-sm-3 hide">
-                <div class="team-img">
-                  <div class="team-sprite team-sprite-16"></div>
+                <!-- <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-2"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Front-End Developer</h6>
-                  <h4 class="title waypoint">Huy Vuong</h4>
-                </div>
+                  <h6 class="c-g waypoint">Software Engineer</h6>
+                  <h4 class="title waypoint">Quang Vo</h4>
+                </div> -->
               </div>
               <div class="col-sm-3 hide">
-                <div class="team-img">
+                <!-- <div class="team-img">
                   <div class="team-sprite team-sprite-17"></div>
                 </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Front-End Developer</h6>
                   <h4 class="title waypoint">Nam Nguyen</h4>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -891,7 +886,7 @@
           <br />
           <p class="text-center waypoint">
             8Bit Rockstars Co. Ltd. <br />
-            F12A- R22, Vincom Center, <br />
+            L08- R01, Vincom Center, <br />
             72 Le Thanh Ton, P. Ben Nghe, <br />
             District 1, Ho Chi Minh City, Vietnam <br />
             info@8bitrockr.com <br />
