--- a/website/index.html
+++ b/website/index.html
@@ -381,7 +381,7 @@
                   <div class="team-sprite team-sprite-2"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Front End Lead</h6>
+                  <h6 class="c-g waypoint">Front-End Lead</h6>
                   <h4 class="title waypoint">Itai Baruch</h4>
                 </div>
               </div>
@@ -413,7 +413,7 @@
                   <h4 class="title waypoint">Ben Reinecke</h4>
                 </div>
               </div>
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-3"></div>
                 </div>
@@ -421,7 +421,7 @@
                   <h6 class="c-g waypoint">Chief Accountant</h6>
                   <h4 class="title waypoint">Hanh Pham</h4>
                 </div>
-              </div>
+              </div> -->
               <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-14"></div>
@@ -560,6 +560,51 @@
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Quang Vo</h4>
                 </div> -->
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-4"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Front-End Developer</h6>
+                  <h4 class="title waypoint">Mary Oleksiuk</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-5"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Finance &amp; Administration Manager</h6>
+                  <h4 class="title waypoint">Hong Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-6"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Front-End Team Leader</h6>
+                  <h4 class="title waypoint">Huy Phan</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-8"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Administrator</h6>
+                  <h4 class="title waypoint">Giang Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-7"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Administrator Intern</h6>
+                  <h4 class="title waypoint">Vi Nguyen</h4>
+                </div>
               </div>
               <div class="col-sm-3 hide">
                 <!-- <div class="team-img">
