--- a/website/index.html
+++ b/website/index.html
@@ -552,14 +552,14 @@
                   <h4 class="title waypoint">Tien Dinh</h4>
                 </div>
               </div>
-              <div class="col-sm-3 hide">
-                <!-- <div class="team-img">
+              <div class="col-sm-3">
+                <div class="team-img">
                   <div class="team-sprite2 team-sprite2-2"></div>
                 </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Software Engineer</h6>
                   <h4 class="title waypoint">Quang Vo</h4>
-                </div> -->
+                </div>
               </div>
               <div class="col-sm-3">
                 <div class="team-img">
